# vk-rt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
include/: Camera.h  Context.h  DebugUtils.h  Device.h  InputManager.h  Instance.h  Light.h  Macros.h  Material.h  Mesh.h  Model.h  Object.h  Pipeline.h  ProbeGrid.h  RayTracingPipeline.h  RefCountPtr.h  Renderer.h  ResourceLoader.h  Result.h  Scene.h  ShaderResources.aps  ShaderResources.h  ShaderResources.rc  Swapchain.h  Texture.h  VulkanBase.h  VulkanBuffer.h  Window.h
shaders/: definitions.glsl  equirectangularProjection.glsl  opaque.rgen.spv  proceduralSky.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytraceProbe.rchit  raytraceProbe.rgen  raytraceProbe.rmiss  raytraceProbeShadow.rmiss  raytraceShadow.rmiss
src/: Camera.cpp  Context.cpp  Device.cpp  InputManager.cpp  Instance.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  Object.cpp  Pipeline.cpp  ProbeGrid.cpp  RayTracingPipeline.cpp  RefCountPtr.cpp  Renderer.cpp  ResourceLoader.cpp  Scene.cpp  Swapchain.cpp  Texture.cpp  VulkanBuffer.cpp  Window.cpp  main.cpp
